--- a/outline.org
+++ b/outline.org
@@ -75,23 +75,30 @@
   
   Another approach that might be taken for emotional intelligence
   testing is using emotional facial expressions in a manner similar to
-  \citet{Schlegel2012}. Being able to recognize emotions in the faces
-  of others seems to be an important social ability. This suggest
-  facial expression recognition ability could be seen as a measure of
-  general emotional intelligence. Facial expressions,
-  \citet{Ekman1969a} found, are to a large extent culturally
-  invariant. The set of culturally invariant basic emotions
+  \citet{Schlegel2012}, where the ability to classify emotional facial
+  expressions was used. The ability recognize emotions in the faces of
+  others seems to be an important social ability
+  \citep{Ekman2003}. This suggest facial expression recognition
+  ability could be seen as a measure of general emotional
+  intelligence.
+  
+  Facial expressions, \citet{Ekman1969a} found, are to a large extent
+  culturally invariant, a prerequisite for valid measure of emotional
+  intelligence. The set of culturally invariant basic emotions
   \citet{Ekman1992} later defined as anger, fear, sadness, enjoyment,
   disgust and surprise.
 
   Cultural invariance is an important property for tests of emotional
-  intelligence, suggesting that micro-expression recognition may be an
-  appropriate measure of emotional intelligence. \citet{Ekman2003}
-  introduced the brief affect recognition task (BART) as a means by
-  emotion recognition can be measured. One trial in the BART paradigm
-  consists of a display of an emotional facial expression with
-  forward- and backward masks of a neutral emotional face to avoid
-  after-images \citep{Ekman2003}.
+  intelligence. Based on the evidence for cultural invariance of
+  emotional facial recognitions it seems that facial-expression
+  recognition may be an appropriate measure of emotional
+  intelligence.
+
+  \citet{Ekman1974a} introduced the brief affect recognition task
+  (BART) as a means by emotion recognition can be measured. One trial
+  in the BART paradigm consists of a display of an emotional facial
+  expression with forward- and backward masks of a neutral emotional
+  face to provide a fixation and avoid after-images respectively \citep{Ekman1974a}.
   
 ** Research problem
    Testing and training applications being a central part of
